fixing border-radius stuff on ios

--- a/css/style.css
+++ b/css/style.css
@@ -1398,6 +1398,7 @@ input.colorPicker#textPicker {
     }
 
     .welcomeBox{
+        border-radius: 0px;
         width: 100%;
         height: 100%;
     }
@@ -1441,6 +1442,10 @@ input.colorPicker#textPicker {
         height: 10px;
     }
 
+    .welcomeTopBar{
+        border-radius: 0px;
+    }
+
     .welcomeTopBarText{
         font-size: 50px;
     }
@@ -1451,6 +1456,10 @@ input.colorPicker#textPicker {
 
     .welcomeText p{
         font-size: 15px;
+    }
+
+    .useOptions{
+        border-radius: 0px;
     }
 
     .useOption{
